tests/pos/fresh2.scala
struct Ref()
def foo(x: Ref^): Ref^{cap, x} = x
def main(): Unit = ()
