tests/neg/lam2.scala
struct Box(unbox: () -> () ->{cap} Unit)
def main(): Unit =
  def foo(f: Box): Unit = f.unbox()()
  ()
